k8's/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-k8s-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-k8s-app
  template:
    metadata:
      labels:
        app: nodejs-k8s-app
    spec:
      containers:
        - name: nodejs-k8s-app
          image: manasmodi18/nodejs-k8s-app:latest
          ports:
            - containerPort: 3000
