k8's/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-k8s-service
spec:
  selector:
    app: nodejs-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
